# django-hello-world

./: .gitignore  .pdm-python  Dockerfile  LICENSE  README.md  bun.lockb  docker-compose.yml  dump.rdb  package.json  pyproject.toml  shell.nix
src/dashboard/: queries.py  urls.py  views.py
src/dashboard/migrations/: 0001_book.py  0002_lend_book.py
src/dashboard/templates/dashboard/: beranda.html  index.html  status.html
src/django_hello/: asgi.py  settings.py  urls.py  wsgi.py
src/landing/: form.py  urls.py  views.py
src/landing/static/landing/: style.css
src/landing/templates/landing/: about.html  all.html  index.html  picture.html  playground.html  video.html
