[project]
name = "django-hello-world"
version = "0.1.0"
description = "OnXP Python Web Development Class Task"
authors = [
    {name = "Muhammad Ulil 'Azmi", email = "ulilazmi100@gmail.com"},
]
dependencies = [
    "django>=5.0.4",
    "ruff>=0.4.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "pdm run src/manage.py runserver"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
