[project]
name = "django-hello-world"
version = "0.1.0"
description = "OnXP Python Web Development Class Task"
authors = [
    {name = "Muhammad Ulil 'Azmi", email = "ulilazmi100@gmail.com"},
]
dependencies = [
    "django==5.0.4",
    "ruff>=0.4.3",
    "django-environ==0.11.2",
    "psycopg-binary==3.1.19",
    "psycopg2-binary==2.9.9",
]
requires-python = "==3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "pdm run src/manage.py runserver"
tw-watch = "bunx tailwindcss -i ./app.css -o ./src/landing/static/landing/tailwind.css --watch --minify"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
